- Gradle 8.6 build - Improved task dependencies (build now creates the final package) - shutdown handler to have no JVM crash on Mac