@@ -1,14 +1,9 @@
+import org.codehaus.groovy.runtime.GStringImpl
+
 plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
-    id "org.beryx.jlink" version "3.0.1"
-
-
-//    id 'org.beryx.runtime' version '1.13.1'
-
-// fat jar
-//    id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
 group = 'at.conapi.messagemanager.bootstrap'
@@ -21,15 +16,12 @@ application {
     mainClass = 'at.conapi.messagemanager.bootstrap.App'
 }
 
-
 javafx {
     version = '17'
     modules = [ 'javafx.controls', 'javafx.fxml' , 'javafx.graphics']
-//    platform = 'mac'
 }
 
-
-ext{
+ext {
     javaFxVersion = '17'
 
     appName = "Message Manager Bootstrap"
@@ -38,163 +30,49 @@ ext{
     appModuleName = "messagemanager.bootstrap"
     appMainClass = "at.conapi.messagemanager.bootstrap.App"
 
-    bootstrapRoot = "${buildDir}/root"
-    bootstrapTarget = "${bootstrapRoot}/target"
-    bootstrapConfigLocation="${bootstrapTarget}/config"
+    bootstrapRoot = "${buildDir}/root" as GStringImpl
+    bootstrapTarget = "${bootstrapRoot}/target" as GStringImpl
+    bootstrapConfigLocation= "${bootstrapTarget}/config" as GStringImpl
 }
 
 dependencies {
-    //I hate this but javafx plugin only allows one platform
-  /*  implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'win'
-    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'mac'
-    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'linux'
-
-    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'win'
-    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'mac'
-    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'linux'
-
-    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'win'
-    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'mac'
-    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'linux'
-
-    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'win'
-    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'mac'
-    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'linux'
-*/
-
-
-  //  testImplementation platform('org.junit:junit-bom:5.9.1')
-  //  testImplementation 'org.junit.jupiter:junit-jupiter'
-
-   // implementation 'org.openjfx:javafx-controls:11.0.1'
-   // implementation 'org.openjfx:javafx-fxml:11.0.1'
     implementation 'org.update4j:update4j:1.5.9'
-
     implementation project(':messagemanager-app')
     implementation project(':messagemanager-bootstrap-config')
 }
 
-test {
-//    useJUnitPlatform()
-}
-
-
-//jlink:
-mainClassName = "${ext.appModuleName}/${ext.appMainClass}"
-
-//.\gradlew :messagemanager-bootstrap:jlink
-jlink {
-
-    //check https://bitbucket.org/walczak_it/pdf-decorator/src/master/build.gradle
-    //imageDir = file("${buildDir}/distributions/imageDir")
-    //imageZip = file("${buildDir}/distributions/${appPackaging}.zip")
- //   imageZip = project.file("${buildDir}/distributions/${appPackaging}-${javafx.platform.classifier}.zip")
-
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-
-    launcher {
-        name = "${appLauncher}"
-    }
-
-
-    // i.e. messagemanager-sonicbranch> .\gradlew :messagemanager-bootstrap:jpackage -PinstallerType=msi
-    jpackage {
-        version = 1.0 //FAILS IF version is set to a snapshot version.
-
-        installerOptions = [
-                '--description', project.description,
-                '--copyright', 'Copyright 2024 conapi GmbH',
-                '--name' , 'Message Manager',
-                '--app-version', project.version,
-                '--verbose'
-
-                // No application block needed, launcher script handles execution
-
-            /*    --input ./jpackage/input
-                --dest ./jpackage/output
-                --module-path 'C:\Program Files\Java\javafx-sdk-21\lib'
-                --add-modules javafx.controls
-                --java-options '--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED'
-                --main-jar ./myapp-jar-with-dependencies.jar
-
-             */
-        ]
-
-        installerType = project.findProperty('installerType')
-        // we will pass this from the command line (example: -PinstallerType=msi)
-        if (installerType == 'msi') {
-            // check if png works on windows
-            imageOptions += ['--icon', 'src/main/resources/icons/messagemanager-icon-large.png']
-            installerOptions += [
-                    '--win-per-user-install',
-                    '--win-dir-chooser',
-                    '--win-menu',
-                    '--win-shortcut',
-                    '--win-menu-group', 'conapi',
-                    '--launcher', 'build/jpackage/input/bin/launch.cmd'
-            ]
-        }
-        // mac
-        if (installerType == 'dmg') {
-           // imageOptions += ['--icon', 'src/main/resources/icons/messagemanager-icon-large.png']
-        }
-        // linux
-        if (installerType in ['deb', 'rpm']) {
-            //imageOptions += ['--icon', 'src/main/resources/icons/messagemanager-icon-large.png']
-            installerOptions += [
-                    '--linux-menu-group', 'conapi',
-                    '--linux-shortcut'
-            ]
-        }
-
-    }
-
-
-}
-
-task dist {
-    dependsOn clean, jlink
-    description "Calls clean and then jlink [default]"
-}
-
-defaultTasks 'dist'
-
-jpackage {
-    doFirst {
-        project.getProperty('installerType') // throws exception if its missing
-    }
-}
-
-//TODO: fix build to use proper gradle approach, below is bad
-
-task copyJavaFxJars(type: Copy) {
+tasks.register('copyJavaFxJars', Copy) {
     from configurations.runtimeClasspath
     include '**/javafx-*.jar'
     rename '(javafx-[a-z]*-[0-9]*).*.jar', '$1.jar' // remove classified win/linux/mac
     into "${bootstrapTarget}/javafx"
 }
 
-task copyBootstrapJars(type: Copy) {
+tasks.register('copyBootstrapJars', Copy) {
+    dependsOn(jar)
+
     from "${buildDir}/libs"
     include '**/*.jar'
     rename '([a-z]*-[a-z]*).*.jar', '$1.jar' // remove version
     into "${bootstrapTarget}/config/bootstrap"
 }
 
-task copyLaunchScripts(type: Copy) {
+tasks.register('copyLaunchScripts', Copy) {
     from "${projectDir}/scripts"
     include '**/*'
     into "${bootstrapTarget}/config/bin"
 }
 
-task copyUpdate4jJar(type: Copy) {
+tasks.register('copyUpdate4jJar', Copy) {
     from configurations.runtimeClasspath
     include '**/update4j-*.jar'
     rename '(update4j).*.jar', '$1.jar' // remove version from jar
     into "${bootstrapTarget}/config/bootstrap"
 }
 
-task copyAppJars(type: Copy) {
+tasks.register('copyAppJars', Copy) {
+    dependsOn(":messagemanager-app:copyAllDependencies")
+
     from "${buildDir}/../../messagemanager-app/build/update4j/messagemanager"
     include '**/*.jar'
     rename '(jmsmessages)-.*.jar', '$1.jar' // remove version
@@ -203,9 +81,12 @@ task copyAppJars(type: Copy) {
 }
 
 
-task createUpdate4JConfig(type: JavaExec){
-        dependsOn('copyBootstrapJars','copyAppJars', 'copyJavaFxJars', 'copyUpdate4jJar', 'copyLaunchScripts')
+tasks.register('createUpdate4JConfig', JavaExec) {
+    dependsOn('copyBootstrapJars', 'copyAppJars', 'copyJavaFxJars', 'copyUpdate4jJar', 'copyLaunchScripts')
+    dependsOn(":messagemanager-bootstrap-config:jar")
 
+    // ensure the plugins are built!
+    dependsOn(":messagemanager-sonicmq:jar")
     // Executable jars can have only _one_ jar on the classpath.
     //classpath = files("${buildDir}/bootstrap-jars/")
     classpath = sourceSets.main.runtimeClasspath
@@ -215,63 +96,8 @@ task createUpdate4JConfig(type: JavaExec){
 
     // arguments to pass to the application
     args(bootstrapRoot, bootstrapTarget, bootstrapConfigLocation)
-
 }
 
 
 //build.compileJava.dependsOn copyPluginJars
-build.dependsOn createUpdate4JConfig
-
-
-//gradle createPackages.windows
-//gradle createPackages.linux
-//gradle createPackages.macos
-
-tasks.register("createPackages") {
-    def platformArgs = [:]
-    each {
-        def platform = name.substring(name.lastIndexOf('.') + 1)
-
-        // Populate platform-specific arguments (modify as needed)
-        platformArgs[platform] += ['--icon', 'src/main/resources/icons/messagemanager-icon-large.png']
-
-        if (platform == 'windows') {
-            // check if png works on windows
-            platformArgs[platform] += [
-                    '--win-per-user-install',
-                    '--win-dir-chooser',
-                    '--win-menu',
-                    '--win-shortcut',
-                    '--win-menu-group', 'conapi',
-                    '--launcher', 'build/jpackage/input/bin/launch.cmd',
-                    '--type', 'msi'
-            ]
-        }
-
-        // Package the image using jpackage (optional)
-        exec {
-            commandLine {
-                args 'jpackage'
-                args '--input', "build/image/${platform}"   // Use the created image
-                args '--resource-dir', 'build/root/target/config'   // Include lib folder content as resources
-                args platformArgs[platform]  // Add all values as individual arguments
-            }
-        }
-
-    }
-}
-/*
-
-jpackage {
-    appName = 'YourAppName'
-    appVersion = '1.0.0'
-    installerType = 'msi'
-    // Other jpackage configurations
-
-    input = file('build/root/target/config')
-
-    windowsMsi {
-        // Set the path to your launch script relative to the input directory
-        launcherScript = file('launch.cmd')
-    }
-}*/
+build.dependsOn('createUpdate4JConfig')
